--- a/src/main/resources/static/catalogo.html
+++ b/src/main/resources/static/catalogo.html
@@ -1,3 +1,4 @@
+<!-- catalogo.html: Página donde se muestran los productos disponibles -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,9 +8,12 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+
 <header>
     <nav>
-        <h1 class="logo">Tecnopc</h1>
+        <a href="index.html">
+            <img src="img/logo_tecnopc.png" alt="Tecnopc" class="logo-img">
+        </a>
         <ul class="nav-links">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="catalogo.html">Catálogo</a></li>
@@ -23,7 +27,7 @@
 <main>
     <h2>Catálogo de productos</h2>
 
-    <!-- OPCIÓN 1: Productos añadidos manualmente -->
+    <!-- Lista de productos agregados manualmente -->
     <div class="producto-grid">
         <div class="producto">
             <img src="img/laptop1.jpg" alt="Laptop Lenovo" />
@@ -51,9 +55,6 @@
         </div>
     </div>
 
-    <!-- OPCIÓN 2: Dinámico desde JS (deja este div si vas a usar JS) -->
-    <!-- <div class="producto-grid" id="catalogoProductos"></div> -->
-
 </main>
 
 <footer>
@@ -61,5 +62,8 @@
 </footer>
 
 <script src="js/main.js"></script>
+
+
+
 </body>
 </html>
