--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -2,15 +2,29 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Codificación del documento -->
     <meta charset="UTF-8">
+
+    <!-- Configuración responsiva para móviles -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Título de la pestaña -->
     <title>Tecnopc | Login</title>
+
+    <!-- Enlace a la hoja de estilos externa -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+<!-- Encabezado con navegación -->
 <header>
     <nav>
-        <h1 class="logo">Tecnopc</h1>
+        <!-- Nombre/logo de la empresa -->
+        <a href="index.html">
+            <img src="img/logo_tecnopc.png" alt="Tecnopc" class="logo-img">
+        </a>
+
+        <!-- Menú de navegación -->
         <ul class="nav-links">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="catalogo.html">Catálogo</a></li>
@@ -21,21 +35,32 @@
     </nav>
 </header>
 
+<!-- Sección principal con el formulario de login -->
 <main>
     <h2>Iniciar sesión</h2>
+
+    <!-- Formulario de inicio de sesión -->
     <form id="loginForm">
-        <label for="usuario">Usuario:</label>
-        <input type="text" id="usuario" required>
-        <label for="clave">Contraseña:</label>
-        <input type="password" id="clave" required>
+        <!-- Campo para nombre de usuario -->
+        <label for="correo">Correo electrónico:</label>
+        <input type="email" id="correo" required>
+
+        <!-- Campo para la contraseña -->
+        <label for="contrasena">Contraseña:</label>
+        <input type="password" id="contrasena" required>
+
+        <!-- Botón para enviar el formulario -->
         <button type="submit">Entrar</button>
     </form>
 </main>
 
+<!-- Pie de página con derechos de autor -->
 <footer>
     <p>&copy; 2025 Tecnopc - Todos los derechos reservados</p>
 </footer>
 
+<!-- Inclusión del archivo JavaScript principal -->
 <script src="js/main.js"></script>
+
 </body>
 </html>
